fix & docs: changed the struct for creating an travelgroup and improved handler logic, updated the docs
